fix(css): prevent layout shift

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -69,6 +69,9 @@
   * {
     @apply border-border outline-border;
   }
+  html {
+    scrollbar-gutter: stable;
+  }
   body {
     @apply bg-bg-1 text-fg-1 font-sans antialiased selection:bg-brand/20 font-features-['cv01','ss03'];
     @apply text-sm -tracking-[0.15px] leading-[22.75px] md:font-[450];
